[gd_scene load_steps=5 format=3 uid="uid://bn1sfd1m0cre4"]

[ext_resource type="Script" uid="uid://b58cc3fjs0xhm" path="res://scripts/cutscenes/cutscene_message_area.gd" id="1_y8ffg"]
[ext_resource type="Texture2D" uid="uid://bhj8i7ucnjm3b" path="res://assets/cutscenes/dialogue_background.png" id="2_m3ylj"]
[ext_resource type="Texture2D" uid="uid://cfrnnapfgwj0e" path="res://assets/cutscenes/dialogue_button.png" id="3_sk77j"]
[ext_resource type="Script" uid="uid://dlm4pl2f6235v" path="res://scripts/texture_scene_button.gd" id="4_l107b"]

[node name="CutsceneMessageArea" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y8ffg")
metadata/_custom_type_script = "uid://b58cc3fjs0xhm"

[node name="MessageBackground" type="Sprite2D" parent="."]
position = Vector2(800, 175)
texture = ExtResource("2_m3ylj")

[node name="SpeakerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 20.0
offset_right = 325.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 36
text = "Speaker"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CutsceneMessage" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 75.0
offset_right = 1500.0
offset_bottom = 275.0
theme_override_font_sizes/font_size = 24
text = "This is a long message that I need to have test different things and it needs to be long because I want to test the auto-wrap and this is really boring and I need to see the autowrap and this is born and even then I need to see"
autowrap_mode = 2

[node name="PreviousMessagesButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 285.0
offset_right = 265.0
offset_bottom = 335.0
texture_normal = ExtResource("3_sk77j")

[node name="Label" type="Label" parent="PreviousMessagesButton"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 20
text = "Previous Messages"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AdvanceTextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1340.0
offset_top = 285.0
offset_right = 1590.0
offset_bottom = 335.0
texture_normal = ExtResource("3_sk77j")

[node name="Label" type="Label" parent="AdvanceTextButton"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Next"
horizontal_alignment = 1
vertical_alignment = 1

[node name="YesButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 425.0
offset_top = 285.0
offset_right = 675.0
offset_bottom = 335.0
texture_normal = ExtResource("3_sk77j")
script = ExtResource("4_l107b")
metadata/_custom_type_script = "uid://dlm4pl2f6235v"

[node name="Label" type="Label" parent="YesButton"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Yes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 925.0
offset_top = 285.0
offset_right = 1175.0
offset_bottom = 335.0
texture_normal = ExtResource("3_sk77j")
script = ExtResource("4_l107b")
metadata/_custom_type_script = "uid://dlm4pl2f6235v"

[node name="Label" type="Label" parent="NoButton"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "No"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PreviousMessagesButton" to="." method="_on_previous_messages_button_pressed"]
[connection signal="pressed" from="AdvanceTextButton" to="." method="_on_advance_text_button_pressed"]
[connection signal="pressed_with_scene" from="YesButton" to="." method="_on_button_pressed_with_scene"]
[connection signal="pressed_with_scene" from="NoButton" to="." method="_on_button_pressed_with_scene"]
